--- a/gpo2/ClientApp/package.json
+++ b/gpo2/ClientApp/package.json
@@ -38,6 +38,7 @@
     "react-dom": "^16.0.0",
     "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.2.2",
+    "react-style": "^0.5.5",
     "rimraf": "^2.6.2",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
