--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,29 @@ gp0/gp0/obj/gp0.csproj.nuget.g.props
 gp0/gp0/obj/project.assets.json
 gp0/.vs/gp0/DesignTimeBuild/.dtbcache
 gp0/.vs/gp0/v15/.suo
+gp0/.vs/gp0/v15/.suo
+gp0/.vs/config/applicationhost.config
+gp0/.vs/gp0/v15/Server/sqlite3/storage.ide-shm
+gp0/gp0/bin/Debug/netcoreapp2.1/gp0.deps.json
+gp0/gp0/bin/Debug/netcoreapp2.1/gp0.dll
+gp0/gp0/bin/Debug/netcoreapp2.1/gp0.pdb
+gp0/gp0/bin/Debug/netcoreapp2.1/gp0.runtimeconfig.dev.json
+gp0/gp0/bin/Debug/netcoreapp2.1/gp0.Views.dll
+gp0/gp0/bin/Debug/netcoreapp2.1/gp0.Views.pdb
+gp0/gp0/obj/Debug/netcoreapp2.1/gp0.csproj.FileListAbsolute.txt
+gp0/gp0/obj/Debug/netcoreapp2.1/gp0.dll
+gp0/gp0/obj/Debug/netcoreapp2.1/gp0.pdb
+gp0/gp0/obj/Debug/netcoreapp2.1/gp0.Views.dll
+gp0/gp0/obj/Debug/netcoreapp2.1/gp0.Views.pdb
+gp0/gp0/obj/Debug/netcoreapp2.1/Razor/Views/_ViewImports.g.cshtml.cs
+gp0/gp0/obj/Debug/netcoreapp2.1/Razor/Views/_ViewStart.g.cshtml.cs
+gp0/gp0/obj/Debug/netcoreapp2.1/Razor/Views/Auth/Login.g.cshtml.cs
+gp0/gp0/obj/Debug/netcoreapp2.1/Razor/Views/Auth/Registration.g.cshtml.cs
+gp0/gp0/obj/Debug/netcoreapp2.1/Razor/Views/Home/Home.g.cshtml.cs
+gp0/gp0/obj/Debug/netcoreapp2.1/Razor/Views/Home/OutDocuments.g.cshtml.cs
+gp0/gp0/obj/Debug/netcoreapp2.1/Razor/Views/Home/SendDoc.g.cshtml.cs
+gp0/gp0/obj/Debug/netcoreapp2.1/Razor/Views/Shared/_CookieConsentPartial.g.cshtml.cs
+gp0/gp0/obj/Debug/netcoreapp2.1/Razor/Views/Shared/_ValidationScriptsPartial.g.cshtml.cs
+gp0/gp0/obj/Debug/netcoreapp2.1/Razor/Views/Shared/Error.g.cshtml.cs
+gp0/gp0/obj/Debug/netcoreapp2.1/Razor/Views/Shared/HomeLayout.g.cshtml.cs
+gp0/gp0/obj/Debug/netcoreapp2.1/Razor/Views/Shared/LoginLayout.g.cshtml.cs
