--- a/gp0/gp0/gp0.csproj
+++ b/gp0/gp0/gp0.csproj
@@ -14,6 +14,9 @@
     <Content Update="Views\Home\profile.cshtml">
       <Pack>$(IncludeRazorContentInPack)</Pack>
     </Content>
+    <Content Update="Views\Shared\AdminLayout.cshtml">
+      <Pack>$(IncludeRazorContentInPack)</Pack>
+    </Content>
   </ItemGroup>
 
 </Project>
